Fix relation between Invoice & Customer
